Fix right edge of waveform on mobile

--- a/greenfield/app/assets/stylesheets/greenfield/mobile.css.scss
+++ b/greenfield/app/assets/stylesheets/greenfield/mobile.css.scss
@@ -73,7 +73,7 @@
           }
           .waveform {
             left: 60px;
-            width: 82%;
+            width: 79%;
             height: 50px;
             padding-top: 4px;
           }
